# emailcampaign

./: 001 DB Creation.ipynb  README.md  customer_data.db  email.md  pyproject.toml  report.md
src/email_campaign/: crew.py  main.py
src/email_campaign/config/: agents.yaml  tasks.yaml
src/email_campaign/tools/: sql_analysis.py
